src/snapshots/transmute__parser__tests__err_struct_missing_second_field_name.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"struct S { a: number, : number, c: number }\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `:`, expected one of identifier, `}`",
                span: 1:23; [22, 23],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    628,
                ),
            },
        ],
    },
)
