src/snapshots/transmute__parser__tests__err_struct_missing_semi.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"struct MyStruct { field: type }\")).parse()"
---
(
    Ast {
        identifiers: [
            "MyStruct",
            "field",
            "type",
        ],
        identifier_refs: [],
        expressions: [],
        statements: [
            Statement {
                id: StmtId {
                    id: 0,
                },
                kind: Struct(
                    Identifier {
                        id: IdentId {
                            id: 0,
                        },
                        span: 1:8; [7, 15],
                    },
                    [
                        Field {
                            identifier: Identifier {
                                id: IdentId {
                                    id: 1,
                                },
                                span: 1:19; [18, 23],
                            },
                            ty: Identifier {
                                id: IdentId {
                                    id: 2,
                                },
                                span: 1:26; [25, 29],
                            },
                            span: 1:19; [18, 29],
                        },
                    ],
                ),
                span: 1:1; [0, 31],
            },
        ],
        root: [
            StmtId {
                id: 0,
            },
        ],
    },
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `eof`, expected one of `;`",
                span: 1:32; [31, 31],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    1046,
                ),
            },
        ],
    },
)
