src/snapshots/transmute__parser__tests__err_struct_missing_third_field_name.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"struct S { a: number, b: number, : number }\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `:`, expected one of identifier, `}`",
                span: 1:34; [33, 34],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    623,
                ),
            },
        ],
    },
)
