src/snapshots/transmute__parser__tests__err_struct_missing_type_name.snap
---
source: src/parser.rs
expression: "(&ast, &diagnostics)"
---
(
    Ast {
        identifiers: [
            "MyStruct",
            "field",
        ],
        identifier_refs: [],
        expressions: [],
        statements: [
            Statement {
                id: StmtId {
                    id: 0,
                },
                kind: Struct(
                    Identifier {
                        id: IdentId {
                            id: 0,
                        },
                        span: 1:8; [7, 15],
                    },
                    [],
                ),
                span: 1:1; [0, 26],
            },
        ],
        root: [
            StmtId {
                id: 0,
            },
        ],
    },
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `}`, expected one of identifier",
                span: 1:26; [25, 26],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    320,
                ),
            },
        ],
    },
)
