src/snapshots/transmute__parser__tests__err_struct_name_must_start_with_upper_case.snap
---
source: src/parser.rs
expression: "(&ast, &diagnostics)"
---
(
    Ast {
        identifiers: [
            "myStruct",
            "f0",
            "t0",
        ],
        identifier_refs: [],
        expressions: [],
        statements: [
            Statement {
                id: StmtId {
                    id: 0,
                },
                kind: Struct(
                    Identifier {
                        id: IdentId {
                            id: 0,
                        },
                        span: 1:8; [7, 15],
                    },
                    [
                        Field {
                            identifier: Identifier {
                                id: IdentId {
                                    id: 1,
                                },
                                span: 1:19; [18, 20],
                            },
                            ty: Identifier {
                                id: IdentId {
                                    id: 2,
                                },
                                span: 1:23; [22, 24],
                            },
                            span: 1:19; [18, 24],
                        },
                    ],
                ),
                span: 1:1; [0, 26],
            },
        ],
        root: [
            StmtId {
                id: 0,
            },
        ],
    },
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Struct name 'myStruct' must start with an upper case letter",
                span: 1:8; [7, 15],
                level: Warning,
                generated_at: (
                    "src/parser.rs",
                    284,
                ),
            },
        ],
    },
)
