src/snapshots/transmute__parser__tests__err_unprotected_struct_in_if_expression_3.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"if 1 - Point{} {}\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `{`, expected one of identifier, number, `true`, `false`, `let`, `ret`, `if`, `while`, `.`, `(`, `*`, `/`, `-`, `+`, `==`, `!=`, `>`, `>=`, `<`, `<=`",
                span: 1:16; [15, 16],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    269,
                ),
            },
        ],
    },
)
