src/snapshots/transmute__parser__tests__err_unprotected_struct_in_if_expression_4.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"if (1 + 1) - Point{} {}\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `{`, expected one of (22) identifier 357, number 358, `true` 360, `false` 361, `let` 363, `ret` 364, `if` 365, `while` 366, `.` 1042, `(` 362, `=` 1100, `*` 1211, `/` 1209, `-` 359, `-` 1205, `+` 1207, `==` 1193, `!=` 1195, `>` 1197, `>=` 1199, `<` 1201, `<=` 1203",
                span: 1:22; [21, 22],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    353,
                ),
            },
        ],
    },
)
